Add unit test to have full code coverage for org.statemach.db.graphql